# mooc-grader-cont

./: .gitignore  LICENSE  README.md  mgcont-http-debugger.sh  mgcont.sh  pyproject.toml  setup.cfg
mgcont/: __init__.py  container.py  docker_run.py  docker_utils.py  paths.py  submission_dir.py
server/: DebugHTTPServer.py  Dockerfile
