[metadata]
name = mgcont
version = 1.0.0
author = Teemu Lehtinen
author_email = teemu.t.lehtinen@aalto.fi
description = Creates an exercise grading container
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/teemulehtinen/mooc-grader-cont
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.6
install_requires =
    docker
    flask
packages = mgcont

[options.entry_points]
console_scripts =
    mgcont = mgcont.sh
